updated nginx templates

--- a/consul/templates/config0.json.j2
+++ b/consul/templates/config0.json.j2
@@ -16,8 +16,8 @@
   "retry_interval": "10s",
   "ui": true,
   "service": {
-    "id": "{{ node_name }}",
-    "name": "{{ node_name }}",
+    "id": "{{ service_web }}",
+    "name": "{{ service_web }}",
     "port": 80,
     "check": {
       "http": "http://localhost:80",
