--- a/go/templates/main.go.j2
+++ b/go/templates/main.go.j2
@@ -8,7 +8,7 @@ import (
 
 func main() {
 
-	templates := template.Must(template.ParseFiles("/terraform/provisioners/roles/go/files/templates/index.html"))
+	templates := template.Must(template.ParseFiles("/sites/go/files/templates/index.html"))
 
 	http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
 		if err := templates.ExecuteTemplate(w, "index.html", nil); err != nil {
@@ -16,6 +16,6 @@ func main() {
 		}
 	})
 
-	fmt.Println(http.ListenAndServe(":80", nil))
+	fmt.Println(http.ListenAndServe(":{{ port }}", nil))
 
 }
