updated nginx template to allow weighted load balancing

--- a/nginx/templates/nginx2.conf.ctmpl.j2
+++ b/nginx/templates/nginx2.conf.ctmpl.j2
@@ -8,10 +8,14 @@ events {
 
 error_log /var/log/nginx/error.log;
 
+
+
+
   http {
 
     include mime.types;
 
+    # log_format test '"$http_referer" "$http_host" "$sent_http_host" "$http_server_name" "$sent_http_server_name" ';
     log_format test
         '"$request"'
         '"$http_referer" "$host" '
@@ -49,36 +53,19 @@ error_log /var/log/nginx/error.log;
     tcp_nopush on; #allows tcp to optimise
     # profile_web_active
 
-    {% set inc = namespace(port = 8000) %}
-  {% for item in name_web_list %}
-    {{ '{{' }}if ne {{ '(' }}keyOrDefault {{'"'}}{{ kv_path_web }}/{{ weight_web_list[loop.index0] }}{{'"'}} {{'"'}}0{{'"'}}{{ ')' }} {{'"'}}0{{'"'}} {{ '}}' }}
-    {% set inc.port = inc.port + 1 %}
-    server {
-        listen {{ inc.port }};
-        server_name {{ nginx_server_ip }};
-        location / {
-          proxy_pass http://{{ name_alb }};
-          proxy_set_header Host {{ name_web_list[loop.index0] }}.tf.local;
-        }
-      }
-    {{ '{{' }}end{{ '}}' }}
-  {% endfor %}
-
     upstream main {
-      {% set inc = namespace(port = 8000) %}
       {% for item in name_web_list %}
         {{ '{{' }}if ne {{ '(' }}keyOrDefault {{'"'}}{{ kv_path_web }}/{{ weight_web_list[loop.index0] }}{{'"'}} {{'"'}}0{{'"'}}{{ ')' }} {{'"'}}0{{'"'}} {{ '}}' }}
-              {% set inc.port = inc.port + 1 %}
-              server 127.0.0.1:{{ inc.port }} weight={{ '{{' }}keyOrDefault {{'"'}}{{ kv_path_web }}/{{ weight_web_list[loop.index0] }}{{'"'}} {{'"'}}1{{'"'}} {{ '}}' }};
+               server {{ item }}.tf.local weight={{ '{{' }}keyOrDefault {{'"'}}{{ kv_path_web }}/{{ weight_web_list[loop.index0] }}{{'"'}} {{'"'}}1{{'"'}} {{ '}}' }};
           {{ '{{' }}end{{ '}}' }}
       {% endfor %}
     }
-
     {% for item in location_web_list %}
       upstream {{ item }} {
         server {{ name_web_list[loop.index0] }}.tf.local;
       }
     {% endfor %}
+
 
 
     server{
@@ -93,7 +80,7 @@ error_log /var/log/nginx/error.log;
         return 200 "Hello from NGINX Proxy\n";
       {{ '{{' }}else if eq {{ '(' }}keyOrDefault {{'"'}}{{ kv_path_web }}/{{ start_web }}{{'"'}} {{'"'}}0{{'"'}}{{ ')' }} {{'"'}}1{{'"'}} {{ '}}' }}
         proxy_pass http://main;
-        # proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-Host $http_host;
         # proxy_set_header Host $http_host;
         # proxy_set_header X-Real-IP $remote_addr;
         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
