--- a/wordpress/templates/.htaccess.j2
+++ b/wordpress/templates/.htaccess.j2
@@ -1,7 +1,8 @@
-Options +FollowSymlinks
-RewriteEngine On
-RewriteRule ^wp-content/uploads/(.*)$ {{ url_cloudfront }}$1 [r=301,nc,l]
+# BEGIN WordPress
 
+# The directives (lines) between `BEGIN WordPress` and `END WordPress` are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -10,3 +11,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
+
+# END WordPress
